--- a/styles/global.css
+++ b/styles/global.css
@@ -3,6 +3,59 @@
   margin: 0px;
   padding: 0px;
 }
+body { 
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  font-family: 'jetbrains mono', monospace;
+  justify-content: center;
+  background-color: #4e4d4d; 
+  color: white;
+}
+
+img {
+  border-radius: 50%;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+div {
+  padding: 10px
+}
+
+.span-color {
+  color: cornflowerblue;
+}
+
+#box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 1rem;
+  background-color: white; 
+  color: black;
+}
+
+.container {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  width: 100%
+}
+
+.child1 {
+  flex: 1;
+}
+il {
+  margin-left: 10px;
+}
+
+
 
 /*title text style*/
 /* the font-family 'JetBrains Mono', has been linked
