--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,4 @@
-/* remove default browser spacing*/
+/* remove default browser spacing */
 * {
   margin: 0px;
   padding: 0px;
@@ -10,22 +10,25 @@ body {
   font-family: 'jetbrains mono', monospace;
   background-color: #4e4d4d; 
   color: white;
+  width: 50%;
+  margin: auto;
+  
 }
-
 img {
   border-radius: 50%;
 }
 
-header {
+.container {
   display: flex;
-  flex-direction: column;
-}
-div {
-  padding: 10px
+  flex-direction: row;
+  align-items: center;
 }
 
-.span-color {
-  color: cornflowerblue;
+#profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center
 }
 
 #box {
@@ -38,26 +41,37 @@ div {
   background-color: white; 
   color: black;
 }
-
-.container {
+#summary {
   display: flex;
-  flex: 1;
-  flex-direction: row;
-  width: 100%
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+} 
+
+div {
+  padding: 10px
 }
 
-.child1 {
-  flex: 1;
+.span-color {
+  color: cornflowerblue;
 }
+
 il {
-  margin-left: 10px;
+  margin-left: 5px;
 }
 
 a {
   text-decoration: none;
 }
 
+hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 /*title text style*/
 /* the font-family 'JetBrains Mono', has been linked
  * and is available for your use
  * */
+
+
